@@ -2890,6 +2890,7 @@ prefixes and internal hyphens:
 .Ds
 .ft \*(Cf
 batchloop	exitonfalse	isinteractive
+islogin
 .ft R
 .De
 .PP
